--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -102,7 +102,7 @@
         - RETAIL STORES -
     </h2>
 
-    <img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
+    <img class='sb-whiteIconBg right' src='assets/images/qr/spotbie-white-icon.png' />
 
     <div class="text-uppercase text-center">
 
@@ -139,7 +139,7 @@
         - EVENTS NEAR YOU -
     </h2>
     
-    <img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
+    <img class='sb-whiteIconBg' src='assets/images/qr/spotbie-white-icon.png' />
     
     <div class="text-uppercase text-center">
         
