--- a/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.css
+++ b/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.css
@@ -93,6 +93,10 @@
     width: 100%;
     font-size: .6rem;
     padding-top: 20px;
+    background: url(src/assets/images/home_imgs/spotbie-white-icon.svg);    
+    background-size: cover!important;
+    background-position: center!important;
+    background-repeat: no-repeat!important;    
 }
 .sb-perDollarTopAd{
     position: absolute;
