--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -134,7 +134,7 @@
 
     </agm-map>    
 
-    <div class='spotbie-categoryPull' *ngIf="isMobile && map">
+    <div class='spotbie-categoryPull' *ngIf="!isDesktop && map">
 
       <div class='sb-optionGet' (click)="spawnCategories('food')">
         <img src="assets/images/home_imgs/find-places-to-eat.svg" />
@@ -150,16 +150,16 @@
 
     </div>
 
-    <!--<app-bottom-ad-banner 
+    <app-bottom-ad-banner 
             class='mt-4' 
-            *ngIf="map && locationFound && searchResults.length < 1"
+            *ngIf="map && locationFound && searchResults.length < 1 && isMobile"
             #bottomAdBanner 
             [eventsClassification]="eventsClassification"
             [accountType]="searchCategory" 
             [categories]="bottom_banner_categories"  
             [lat]="lat" 
             [lng]="lng">
-    </app-bottom-ad-banner>-->
+    </app-bottom-ad-banner>
 
     <div class='spotbie-search-results' *ngIf="show_search_box && searchResults.length > 0">
 
