--- a/src/styles.css
+++ b/src/styles.css
@@ -817,6 +817,23 @@ p.sb-helpInfo{
     position: relative;
     margin: 0 auto;
 }
+
+.sb-getStarted{ 
+    max-width: 220px;
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+    font-size: 20px;
+    border-radius: 13px!important;
+    background: -webkit-linear-gradient(45deg,#64e56f,#35a99f);
+    background: linear-gradient(45deg,#64e56f,#35a99f);
+}
+.sb-getStarted span{
+    background: linear-gradient(45deg,#212529,#131313);
+    background: -webkit-linear-gradient(45deg,#212529,#131313);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;   
+}
+
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1440px) {
     
@@ -874,8 +891,13 @@ p.sb-helpInfo{
         right: 2%;
     }    
 }
-@media (max-width: 700px) { 
-
+@media (max-width: 650px) { 
+    .sb-getStarted span{
+        background: unset;
+        -webkit-background-clip: unset;
+        -webkit-text-fill-color: unset;
+        color:  #212529;        
+    }
 }
 @media (max-width: 600px) { 
     .spotbie-el-fixed-bottom{
