--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -3,7 +3,7 @@
     <div class="sb-top-headerImg"></div>
 
     <h1 class="sb-text-light-green-gradient text-uppercase">
-        COMMUNITY LOYALTY POINTS
+        LOYALTY POINTS
     </h1>
     
     <div class="spotbie-button sb-getStarted" (click)="spawnCategories('food')">
