--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
@@ -133,7 +133,7 @@
         </div>
 
         <div class='mt-5 mb-5 sb-deleteMe' *ngIf="ad !== null && ad !== undefined" (click)="deleteMe()">
-            <span class="spotbie-text-gradient">DELETE AD SUBSCRIPTION </span><i class='fa fa-trash'></i>
+            <span class="spotbie-text-gradient">DELETE SUBSCRIPTION </span><i class='fa fa-trash'></i>
         </div>
 
         <div class='mt-5 mb-5 cursor-pointer' (click)="closeThis()">
