--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.html
@@ -2,7 +2,7 @@
 
 <div>
 
-    <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase mb-5">IN-HOUSE PROMOTIONS</h4>
+    <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase mb-5">IN-HOUSE</h4>
 
     <p class="spotbie-loyaltyMenuDescription spotbie-text-gradient text-center mt-2 mb-3">
         Local promotions that work and get your business exposure.
