--- a/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.html
+++ b/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.html
@@ -8,8 +8,6 @@
             
             <div class='card-header'>
                 
-                <img [ngSrc]="redeemItem.default_picture" class='rounded-circle' />
-
                 <span class='sb-text-light-green-gradient' *ngIf="!redeemItem.name">{{ redeemItem.username }}</span>
 
                 <span class='sb-text-light-green-gradient text-uppercase' 
@@ -18,6 +16,10 @@
             </div>
             
             <div class='card-body text-uppercase' *ngIf="!redeemItem.name">
+
+                <div class='mb-2' *ngIf="redeemItem.reward_image !== null">
+                    <img class="sb-rewardImage" [src]="redeemItem.reward_image" />
+                </div>
 
                 <div class='mb-2'>
                     {{ redeemItem.updated_at | date:'mediumDate' }}
@@ -37,20 +39,32 @@
             
             <div class='card-body text-uppercase' *ngIf="redeemItem.name">
 
+                <div class='mb-2' *ngIf="redeemItem.reward_name !== null">
+                    {{  redeemItem.reward_name }}
+                </div>
+
+                <div class='mb-2' *ngIf="redeemItem.reward_image !== null">
+                    <img class="sb-rewardImage" [src]="redeemItem.reward_image" />
+                </div>
+
                 <div class='mb-2'>
                     {{ redeemItem.updated_at | date:'mediumDate' }}
                 </div>
 
-                <div class='mb-2'>
-                    Loyalty Points: <span class='sb-text-light-green-gradient'>
+                <div class='mb-2' *ngIf="redeemItem.point_cost == null">
+                    Loyalty Points <span class='sb-text-light-green-gradient'>
                         +{{ redeemItem.amount | number:'1.1-2':'en-US' }}
                     </span>
                 </div>      
                          
-                <div class='mb-2'>
-                    Total Spent: <span class='sb-text-light-green-gradient'>${{ redeemItem.total_spent | number:'1.1-2':'en-US' }}</span>
+                <div class='mb-2' *ngIf="redeemItem.point_cost == null">
+                    Total Spent <span class='sb-text-light-green-gradient'>${{ redeemItem.total_spent | number:'1.1-2':'en-US' }}</span>
                 </div>        
-                            
+                  
+                <div class='mb-2' *ngIf="redeemItem.point_cost !== null">
+                    LP Cost <span class='sb-text-light-green-gradient'>{{ redeemItem.point_cost | number:'1.0':'en-US' }}</span>
+                </div>
+
             </div>
 
             <div class='card-footer text-uppercase text-center'>
