--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -411,6 +411,10 @@
 
                     </div>                            
 
+                    <div class="spotbie-input-info spotbie-text-gradient text-center mt-4 mb-4" style="font-size: .8rem;">
+                        "Events" account type is coming soon.
+                    </div>
+
                     <div class="mt-4" style="font-size: .8rem;" *ngIf="userIsTrial && !userIsSubscribed">
 
                         <span class='sb-text-light-green-gradient'>TRIAL IS ACTIVE</span>
