--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -147,14 +147,14 @@
                 spotbie-padding"
                 *ngIf="business"
                 (click)="usersHome()">
-          <i class="fas fa-user"></i><span class='spotbie-text-link'> CLICK HERE FOR NON-BUSINESS USERS</span>
+          <i class="fas fa-user" style="font-size:.5rem;"></i><span class='spotbie-text-link'> CLICK HERE FOR NON-BUSINESS USERS</span>
     </div>
 
     <div class="spotbie-rel-div
                 spotbie-padding"
                 *ngIf="!business"
                 (click)="businessHome()">
-          <i class="fas fa-business-time"></i><span class='spotbie-text-link'> LOOKING FOR THE BUSINESS PORTAL?</span>
+          <i class="fas fa-business-time" style="font-size:.5rem;"></i><span class='spotbie-text-link'> LOOKING FOR THE BUSINESS PORTAL?</span>
     </div>
 
     <div></div>
