--- a/src/app/spotbie/menu.component.css
+++ b/src/app/spotbie/menu.component.css
@@ -284,20 +284,16 @@ img.sb-qr:hover{
     text-align: left;
 }
 .sb-fb-logIn-btn{
-    background: #4385f5;
-    border: 1px solid #4385f5
+    background: #4385f573 !important;
 }
 .sb-fb-logIn-btn:hover {
-    background-color: #2c6ad4;
-    border-color: #2c6ad4
+    background-color: #2c6ad4 !important;
 }
 .sb-google-logIn-btn{
-    background: #db4c3e;
-    border: 1px solid #db4c3e
+    background: #db4c3e85 !important;
 }
 .sb-google-logIn-btn:hover {
-    background: #bd4033;
-    border-color: #bd4033
+    background: #bd4033 !important;
 }
 .sb-google-logIn-btn i{
     margin-left: 10px;
@@ -313,6 +309,7 @@ img.sb-qr:hover{
     border-spacing: 0px;
     table-layout: fixed;
     background: linear-gradient(45deg,#64e56f, #35a99f );
+    opacity: 0.65;
 }
 .sb-inputWithIconWrapper .fa.fa-user,
 .sb-inputWithIconWrapper .fa.fa-envelope,
