--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
@@ -2,6 +2,10 @@
 
 <div class="spotbie-overlay-window">
 
+    <div class='sb-closeButton' (click)="closeRewardCreator()">
+        <i class="fa fa-times"></i>
+    </div>
+
     <div #spbTopAnchor></div>
 
     <div class='sb-rewardCreatorWrapper'>
