--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.html
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.html
@@ -1,13 +1,21 @@
-<div class='spotbie-ad-wrapper-header'     
+<div [ngClass]="getAdWrapperClass()" 
     *ngIf="displayAd"
-    [ngStyle]="spotbieAdWrapperStyles()"
+    [ngStyle]="getAdStyle()"
     (click)="openAd()">
 
-    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images + ')'}" *ngIf="!editMode && ad.id != 2"></div>
-    
-    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + genericAdImage  + ')'}" *ngIf="editMode && ad.id == 2"></div>
+    <div class="spotbie-white-iconImg" [ngStyle]="{'background' : 'url(assets/images/qr/spotbie-white-icon.png)'}"></div>
 
-    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images  + ')'}" *ngIf="editMode && ad.id != 2"></div>
+    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images + ')'}" *ngIf="!editMode && ad.id != 2 && !isMobile"></div>
+
+    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images_mobile + ')'}" *ngIf="!editMode && ad.id != 2 && isMobile"></div>
+    
+    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + genericAdImage  + ')'}" *ngIf="editMode && ad.id == 2 && !isMobile"></div>
+    
+    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + genericAdImageMobile  + ')'}" *ngIf="editMode && ad.id == 2 && isMobile"></div>
+
+    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images  + ')'}" *ngIf="editMode && ad.id != 2 && !isMobile"></div>
+
+    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images_mobile  + ')'}" *ngIf="editMode && ad.id != 2 && isMobile"></div>
 
     <div class='sb-ad-bottom'>
         
