--- a/src/styles.css
+++ b/src/styles.css
@@ -162,7 +162,7 @@ div:active, div:focus{
 ::-webkit-scrollbar{
     height: 10px;
     width: 10px;
-    background: #332f3e;
+    background: #1c1924;
 }
 ::-webkit-scrollbar-thumb{
     background: linear-gradient(90deg,#35a99f,#64e56f);
