--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -158,11 +158,10 @@
     min-width: 300px;
     max-width: 300px;
     width: 300px;
-    right: 0;
+    right: -1%;
     top: 0;
     bottom: 0;
     overflow-y: scroll;
-    direction: rtl;
     -webkit-overflow-scrolling: touch;
     background-color: white;
     padding-top: 80px;
@@ -828,6 +827,20 @@ button.gm-ui-hover-effect:focus-within{
 }
 .sb-eventsResultsTitle{
     padding-top: 100px;
+}
+::-webkit-scrollbar{
+    height: 10px;
+    width: 10px;
+    background: transparent;
+}
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(90deg, transparent,transparent);
+}
+::-webkit-scrollbar-corner{
+    background: linear-gradient(90deg,transparent,transparent);
+}
+::-webkit-scrollbar-button{
+    background: linear-gradient(90deg,transparent,transparent);
 }
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1583px) { 
