Fixed Minor Styling issues on login and sign up componenets

--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -6,8 +6,8 @@
 
         <p class='sb-signUpGeneralInstructions spotbie-text-gradient text-uppercase text-center' id="sign_up_general_instructions" #spotbieSignUpIssues>
 
-            <span *ngIf="!business">Sign up to earn rewards with spotbie.</span>
-            <span *ngIf="business">Sign up to find customers.</span>
+            <span *ngIf="!business">Sign up to earn rewards</span>
+            <span *ngIf="business">Sign up to find customers</span>
             
         </p>
         
