--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
@@ -141,6 +141,9 @@
     .sb-login-top-padding{
         padding-top: 40px;
     }
+    .fa-eye{
+        top: 23%;
+    }    
 }
 @media (max-width: 560px) { }
 @media (max-width: 460px) {     
