--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.css
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.css
@@ -202,7 +202,10 @@ h2 strong.sep-two {
     }
     h2 strong.sep-two {
         display: none;
-    }  
+    }
+    .fa-eye{
+        top: 23%;
+    }       
 }
 @media (max-width: 600px) { 
 
